fixes some default text alignments and tidies ie8

--- a/app/assets/sass/tables/transactions.scss
+++ b/app/assets/sass/tables/transactions.scss
@@ -77,6 +77,18 @@
 
       td {
         min-width: 1px;
+        text-align: right;
+
+        @at-root {
+
+          .lte-ie8 & {
+            text-align: left;
+          }
+        }
+
+        @media (min-width: $mobile) {
+          text-align: left;
+        }
 
         &.numeric {
           text-align: left;
